--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Filmes Top</title>
+  <title>Dodz Filmes</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- facebook and other social sites -->
   <meta property="og:type" content="Filmes e séries">
-  <meta property="og:site_name" content="Filmes Top">
-  <meta property="og:title" content="Filmes Top">
-  <meta property="og:description" content="Filmes Top - beta :)">
+  <meta property="og:site_name" content="Dodz Filmes">
+  <meta property="og:title" content="Dodz Filmes">
+  <meta property="og:description" content="Dodz Filmes - beta :)">
   <meta property="og:image" content="https://image.tmdb.org/t/p/w1920/5wNUJs23rT5rTBacNyf5h83AynM.jpg">
-  <meta property="og:url" content="https://chavesrodolfo.firebaseapp.com">
+  <meta property="og:url" content="https://dodz-filmes.firebaseapp.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
