--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <meta property="og:description" content="Dodz Filmes - beta :)">
   <meta property="og:image" content="https://image.tmdb.org/t/p/w1920/5wNUJs23rT5rTBacNyf5h83AynM.jpg">
   <meta property="og:url" content="https://dodz-filmes.firebaseapp.com">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#F44336">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
